0.9.9 Mon Jan 26 11:46:30 GMT 2009

  * Add server.title attribute to wiki serialization of 
    tiddlers to support client side renaming.
  * Add Etag handling when POST to revisions collection.
  * Add optional Etag handling when DELETE a tiddler.

0.9.8 Thu Jan 22 17:07:34 GMT 2009

  * Make sure that we enforce the use of an older BeautifulSoup
    to avoid errors while parsing TiddlyWiki files
  * urllib.quote escapes () but javascript encodeURIComponent does
    not, leading to Etag comparison errors. Fixed.
  * If the tiddlyweb.usersign is GUEST accept modifier value
    in PUT Tiddlers.
  * Add some code that shows how to use mod_wsgi to mount TiddlyWeb.

0.9.7 Tue Jan 20 15:59:01 GMT 2009

  * support for user_delete from text store
  * reading the policy of a bag now requires the manage permission
    (instead of read)
  * set DefaultTiddlers when sending one tiddler as a wiki
  * correctly escape '/' in server side generation of etags

0.9.6 Sun Jan 18 11:43:28 GMT 2009

  * Add support for Python logging using the logging
    module. See 'debug_level' in tiddlyweb/config.py.
  * Request logging now goes to tiddlyweb.log instead
    of stderr.

0.9.5 Thu Jan  8 22:45:37 GMT 2009

  * Correct the handling of from_svn and instance plugins
    when external plugins are used.
  * No longer Set-Cookie with chkHttpReadOnly set to false,
    ServerSideSavingPlugin now does this.
  * No longer have a server failure when trying to use a sort
    filter on an attribute that does not exist. Instead send
    and HTTP 400.
  * Add an "update" twanager command. See the help.

0.9.4 Mon Dec 29 14:45:35 GMT 2008

  * Use the latest TiddlyWiki 2.4.2 beta.
  * Update the docstore to use the latest client plugins and docs.
  * Send server.workspace as a partial url fragment in wiki 
    serialization.
  * Correct a minor error in twanager that could cause a warning.

0.9.3 Wed Dec  3 20:05:03 GMT 2008

  * Increase the granularity of modified timestamps on