@@ -178,5 +178,4 @@ def test_post_revision_etag_handling():
     response, content = http.request('http://our_test_domain:8001/bags/bag28/tiddlers/newone/revisions.json',
             method='POST', headers={'If-Match': 'bag28/newone/0', 'content-type': 'application/json'}, body=json_content)
 
-    print content
     assert response['status'] == '204'
