@@ -4,6 +4,8 @@
     tiddlers to support client side renaming.
   * Add Etag handling when POST to revisions collection.
   * Add optional Etag handling when DELETE a tiddler.
+  * Use html5lib to parse tiddly content (into a 
+    BeautifulSoup tree).
 
 0.9.8 Thu Jan 22 17:07:34 GMT 2009
 
